# zephyrproject

./: run.py
app/: CMakeLists.txt  Kconfig  prj.conf
app/battery/: CMakeLists.txt  Kconfig
app/battery/inc/: battery.h
app/battery/src/: battery.c
app/bt_service/: CMakeLists.txt  Kconfig
app/bt_service/inc/: ble_adv.h  blec_acc_service.h  bt_service.h
app/bt_service/src/: ble_adv.c  blec_acc_service.c  bt_service.c
app/inc/: loggers.h  msg_que.h
app/sens_mgr/: CMakeLists.txt  Kconfig
app/sens_mgr/inc/: sens_mgr.h
app/sens_mgr/src/: sens_mgr.c
app/shell_cmd/: CMakeLists.txt  Kconfig
app/shell_cmd/src/: shell_cmd.c
app/src/: main.c
app/wifi_service/: CMakeLists.txt  Kconfig
app/wifi_service/inc/: wifi_service.h
app/wifi_service/src/: wifi_service.c
doc/: ble_svc_arch.drawio
